Update license to EPL-2.0